feat: handle speech based on string length

--- a/videofade-test/index.html
+++ b/videofade-test/index.html
@@ -222,6 +222,7 @@ videoMixer.initPlaylistBuffers();
         },
         onMessage: (message) => {
           console.log("Agent message:", message);
+          videoMixer.handleMessage(message);
 
           // Store conversation text for analysis at next video loop
           if (message && message.message && window.emotionAnalyzer) {
