testing linking convo ID's

--- a/videofade-test/index.html
+++ b/videofade-test/index.html
@@ -259,10 +259,45 @@ if (localStorage.getItem('surveyCompleted') === 'true') {
       // Initialize ElevenLabs conversation using the imported Conversation class
       conversation = await Conversation.startSession({
         signedUrl: signedUrl,
-        onConnect: () => {
+        onConnect: async () => {
           console.log("Voice agent connected");
           isConnected = true;
           window.conversation = conversation; // Expose globally for end interaction button
+
+          // Capture and store the conversation ID
+          const conversationId = conversation.conversationId || conversation.id || null;
+          console.log("Conversation ID:", conversationId);
+
+          if (conversationId) {
+            // Get or create session ID
+            let sessionId = localStorage.getItem('userSessionId');
+            if (!sessionId) {
+              sessionId = `session_${Date.now()}_${Math.random().toString(36).substr(2, 9)}`;
+              localStorage.setItem('userSessionId', sessionId);
+            }
+
+            // Store conversation ID in Supabase
+            try {
+              const response = await fetch('/api/update-conversation-id', {
+                method: 'POST',
+                headers: {
+                  'Content-Type': 'application/json',
+                },
+                body: JSON.stringify({ sessionId, conversationId }),
+              });
+
+              if (response.ok) {
+                console.log('Conversation ID stored successfully');
+              } else {
+                console.error('Failed to store conversation ID');
+              }
+            } catch (error) {
+              console.error('Error storing conversation ID:', error);
+            }
+          } else {
+            console.warn('No conversation ID found in Conversation object');
+          }
+
           voiceBtn.classList.remove("active");
           voiceBtn.classList.add("connected");
           voiceBtn.textContent = "🔴 End Conversation";
